Fixed login and main-nav logo alignment, beautified all files, added javascript file to push entered username and password to backend and to reset those fields , changed login password from text to password

--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,10 @@
+header {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: flex-start;
+  background-color: black;
+}
 .nav {
   background-color: black;
   justify-content: flex-end;
@@ -18,7 +25,7 @@ a {
   border-color: white;
   display: flex;
   flex-direction: row;
-  justify-content: flex-end;
+  justify-content: space-evenly;
   flex-wrap: wrap;
   width: 100%;
   height: 100%;
@@ -33,7 +40,6 @@ a {
 .main-nav .logo {
   width: 4rem;
   height: 100%;
-  margin-right: 20%;
 }
 footer {
   background-color: black;
@@ -44,12 +50,14 @@ footer {
   flex-direction: column;
   border-radius: 2rem;
 }
-header {
+footer .credits {
   display: flex;
-  flex-wrap: wrap;
-  flex-direction: row;
-  justify-content: flex-end;
-  background-color: black;
+  justify-content: flex-start;
+}
+img.souptop {
+  width: 50%;
+  height: auto;
+  border-radius: 20px;
 }
 .btn-primary {
   color: white;
@@ -80,27 +88,18 @@ header {
 .jumbotron p.lead {
   width: 100%;
 }
-img {
-  width: 50%;
-  height: auto;
-  border-radius: 20px;
-}
-.potatoes-2 {
-  display: block;
-  width: 40%;
-  margin-left: 20%;
-}
-.credits {
-  display: flex;
-  justify-content: flex-start;
-}
-.col {
-  text-align: center;
-}
 section {
   width: 100%;
 }
-img .menu {
-  transform: rotate(90deg);
+section .col {
+  text-align: center;
+}
+.potatoes-2 {
+  display: block;
+  width: 50%;
+  margin-left: 20%;
+}
+img.menu {
   width: 80%;
+  border-radius: 20px;
 }
