--- a/less/footer.less
+++ b/less/footer.less
@@ -6,4 +6,9 @@ footer {
     align-items: center;
     flex-direction: column;
     border-radius: 2rem;
+
+    .credits {
+        display: flex;
+        justify-content: flex-start;
+    }
 }
