--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,9 +1,8 @@
-header {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    justify-content: flex-end;
-    background-color: black;
+img.souptop {
+    width: 50%;
+    height: auto;
+    border-radius: 20px;
+
 }
 
 .btn-primary {
@@ -35,42 +34,27 @@ header {
     }
 
     p.lead {
-    width: 100%;    
+        width: 100%;
     }
-}
-
-img {
-    width: 50%;
-    height: auto;
-    border-radius: 20px;
-
-}
-
-.potatoes-2 {
-    display: block;
-    width:40%;
-    margin-left: 20%
-    
-}
-
-.credits {
-    display: flex;
-    justify-content: flex-start;
-}
-
-// .row .col {
-//     font-weight: 400;
-// }
-
-.col {
-    text-align: center;
 }
 
 section {
     width: 100%;
+
+    .col {
+        text-align: center;
+
+    }
 }
 
-img .menu {
-    transform: rotate(90deg);
+.potatoes-2 {
+    display: block;
+    width: 50%;
+    margin-left: 20%
+}
+
+img.menu {
+    // transform: rotate(90deg);
     width: 80%;
+    border-radius: 20px;
 }
