--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,3 +1,11 @@
+header {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: flex-start;
+    background-color: black;
+}
+
 // Nav adjustments
 .nav {
     background-color: black;
@@ -21,16 +29,16 @@ a {
 .main-nav {
     background-color: white;
     color: white;
-    border-color: white;  
+    border-color: white;
     display: flex;
     flex-direction: row;
-    justify-content: flex-end;
+    justify-content: space-evenly;
     flex-wrap: wrap;
     width: 100%;
     height: 100%;
     align-items: center;
     padding: 1rem 0 1rem 0;
-    
+
     a {
         width: 100%;
         color: black;
@@ -40,7 +48,6 @@ a {
     .logo {
         width: 4rem;
         height: 100%;
-        margin-right: 20%;
+        // margin-right: 20%;
     }
 }
-
